--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 3000
 INFURA_API_KEY=815924f652d848018897cb789b99d55b
 ETHERSCAN_API_KEY=E5DG2IDTDCPAAYTT4ZNF2QK1AAQQKXQUZG
+
+TRANSACTIONS_PER_PAGE=1000,
+API_DELAY=250
+REQUEST_TIMEOUT=10000
